fixed navbar and added seo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Game8</title>
+    <title>Game with Live Streaming-Game8</title>
+    <meta name="description" content="Game8 is the best way to explore the world of gaming. With a new, fully interactive website. Live stream your Gaming skills or watch awesome gamplays of trending games by pro players.">
+    <meta name="keywords" content="Game8, esports, Live streaming, Gaming, Game with live Streaming, trending games, pro players,watch, Live now, trending now, stremers">
 </head>
 
 <body>
